--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "use-metadata",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "module": "dist/use-metadata.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "react",
+    "title",
+    "metadata",
+    "head",
+    "og:data",
+    "open graph",
+    "react helmet"
   ],
   "license": "MIT",
   "scripts": {
