--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "use-metadata",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "module": "dist/use-metadata.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tylerzey/use-metadata.git"
+  },
   "keywords": [
     "react",
     "title",
